--- a/style.css
+++ b/style.css
@@ -67,7 +67,8 @@ a:hover{
 }
 .hero-text{
     font-family: 'Permanent Marker', cursive;
-    font-size: 22px;
+    text-align: none;
+    font-size: 26px;
     color: white; 
     line-height: 100px;
     margin-left: 30px;
@@ -92,6 +93,10 @@ p{
 .images{
     height: 200px;
     width: 100%;
+}
+h1{
+    font-family: 'Permanent Marker', cursive;
+    font-size: 34px;  
 }
 h2{
     font-family: 'Permanent Marker', cursive;
